--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ img {
   background-color: #f0a500;
   colour: white;
   padding: 2px 14px;
+  border-radius: 4px;
 }
 
 .list_inline {
@@ -71,11 +72,22 @@ img {
   colour: white;
   padding: 2px 4px;
   margin: 8px 16px;
+  border-radius: 4px;
 }
 
+@media (max-width: 960px) {
+  .card_white {
+    width: 700px;
+
+  }
+}
+@media (max-width: 720px) {
+  .card_white  {
+    width: 500px;
+  }
+}
 @media (max-width: 540px) {
   .card_white {
     width: 300px;
   }
-  img { max-width: 100%; }
 }
